Upgrades to angular ui 0.10 Fixes modals to use angular ui instead of bootstrap defaults Fixes close button being covered by modal ul navigation Adds ranges.yaml

--- a/less/bootstrap/bootswatch.less
+++ b/less/bootstrap/bootswatch.less
@@ -121,6 +121,9 @@ pre {
   border:0px;
   position:relative;
   top:-1px;
+  &.modal-nav {
+    width:97%;
+  }
   >li {
     cursor: pointer;
     margin-left:10px;
